--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOLY SPIRIT PRAYER HOUSE</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
-</head>
-<body>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HOLY SPIRIT PRAYER HOUSE</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <script src="js/script.js" defer></script>
+    </head>
+    <body>
 
     <!-- ✅ Header Section -->
     <header id="mainHeader">
@@ -81,7 +81,23 @@
         </div>
     </section>
     
+    <!-- ✅ About the Founder Section -->
+    <section class="founder-section">
+        <div class="founder-container">
+            <div class="founder-image">
+                <img src="images/founder.jpg" alt="Founder">
+            </div>
+            <div class="founder-content">
+                <h2>About the Founder</h2>
+                <h3>Pastor P. Moses</h3>
+                <p>Pastor P. Moses is the visionary behind the Holy Spirit Prayer House, dedicated to spreading faith, love, and hope to communities worldwide. Through prayer, outreach, and ministry, he has transformed lives and continues to guide people in their spiritual journey.</p>
+            </div>
+        </div>
+    </section>
 
+
+
+    
     <!-- ✅ Footer Section -->
     <footer>
         <div class="footer-container">
@@ -100,5 +116,5 @@
         </div>
     </footer>
 
-</body>
-</html>
+    </body>
+    </html>
