--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,18 +6,19 @@
     <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
     <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
     <meta name="author" content="Holy Spirit Prayer House">
-    <title>HOLY SPIRIT PRAYER HOUSE</title>
+    <title>HOLY SPIRIT PRAYER HOUSE</title> <!-- ✅ Title issue fixed -->
     <link rel="icon" type="image/png" href="images/favicon.png"> 
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
+    <script src="js/script.js" defer></script> <!-- ✅ Ensures script runs after HTML is loaded -->
 </head>
 <body>
+
 
     <!-- ✅ Header Section -->
     <header id="mainHeader">
         <div class="header-container">
             <div class="logo">
-                <img src="images/logo.png" alt="HSPH">
+                <img src="images/logo.webp" alt="HSPH">
             </div>
 
             <nav class="desktop-nav">
