changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,8 +35,8 @@
                 </ul>
             </nav>
 
-            <!-- ✅ Mobile Menu Button (Hidden on Desktop) -->
-            <button id="menuButton" class="mobile-only">☰</button>
+            <!-- ✅ Mobile Menu Button (Visible Only on Mobile) -->
+            <button id="menuButton" class="mobile-menu-button mobile-only">☰</button>
         </div>
 
         <!-- ✅ Mobile Navigation -->
@@ -67,7 +67,6 @@
             </div>
         </div>
     </section>
-
 
     <section class="section-container">
         <!-- ✅ About Us Section -->
