changes in code

--- a/frontend/donate.html
+++ b/frontend/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contact Us - HOLY SPIRIT PRAYER HOUSE</title>
+    <title>Donate - HOLY SPIRIT PRAYER HOUSE</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
@@ -10,13 +10,11 @@
     <!-- ✅ Include the header -->
     <div id="header-container"></div>
 
-    <!-- ✅ Contact Section -->
+    <!-- ✅ Donate Section -->
     <section class="page-content">
-        <h1>Contact Us</h1>
-        <p>Email: pastorpmoses2014@gmail.com</p>
-        <p>Phone: +91 9848315170</p>
-        <p>Phone: +1 (551) 697-6451</p>
-        <p>Address: 94 Street, Andhra Pradesh, India</p>
+        <h1>Support Our Mission</h1>
+        <p>Your generous donation helps us continue spreading faith and love through our outreach programs.</p>
+        <a href="donate.html" class="cta-button">Donate Now</a>
     </section>
 
     <!-- ✅ Include the footer -->
