--- a/frontend/events.html
+++ b/frontend/events.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Us - HOLY SPIRIT PRAYER HOUSE</title>
+    <title>Events - HOLY SPIRIT PRAYER HOUSE</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
 <body>
 
+    <!-- ✅ Include the header -->
     <div id="header-container"></div>
 
+    <!-- ✅ Events Section -->
     <section class="page-content">
-        <h1>About Us</h1>
-        <p>We are dedicated to spreading faith and love through our ministries.</p>
+        <h1>Upcoming Events</h1>
+        <p>Join us for upcoming events, worship services, and community programs.</p>
     </section>
 
+    <!-- ✅ Include the footer -->
     <div id="footer-container"></div>
 
 </body>
