--- a/frontend/ministries.html
+++ b/frontend/ministries.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contact Us - HOLY SPIRIT PRAYER HOUSE</title>
+    <title>Ministries - HOLY SPIRIT PRAYER HOUSE</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
@@ -10,13 +10,10 @@
     <!-- ✅ Include the header -->
     <div id="header-container"></div>
 
-    <!-- ✅ Contact Section -->
+    <!-- ✅ Ministries Section -->
     <section class="page-content">
-        <h1>Contact Us</h1>
-        <p>Email: pastorpmoses2014@gmail.com</p>
-        <p>Phone: +91 9848315170</p>
-        <p>Phone: +1 (551) 697-6451</p>
-        <p>Address: 94 Street, Andhra Pradesh, India</p>
+        <h1>Our Ministries</h1>
+        <p>Our ministries focus on serving the community through prayer, outreach, and support programs.</p>
     </section>
 
     <!-- ✅ Include the footer -->
