--- a/frontend/volunteer.html
+++ b/frontend/volunteer.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Us - HOLY SPIRIT PRAYER HOUSE</title>
+    <title>Get Involved - HOLY SPIRIT PRAYER HOUSE</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
 <body>
 
+    <!-- ✅ Include the header -->
     <div id="header-container"></div>
 
+    <!-- ✅ Get Involved Section -->
     <section class="page-content">
-        <h1>About Us</h1>
-        <p>We are dedicated to spreading faith and love through our ministries.</p>
+        <h1>Get Involved</h1>
+        <p>Volunteer with us and make a difference in the lives of many.</p>
     </section>
 
+    <!-- ✅ Include the footer -->
     <div id="footer-container"></div>
 
 </body>
