changes in code

--- a/frontend/header.html
+++ b/frontend/header.html
@@ -16,6 +16,23 @@
                 <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
             </ul>
         </nav>
+
+        <!-- ✅ Mobile Menu Button -->
         <button id="menuButton" class="mobile-menu-button mobile-only">☰</button>
+
+        <!-- ✅ Mobile Navigation -->
+        <nav class="mobile-nav" id="mobileNav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="sermons.html">Sermons</a></li>
+                <li><a href="ministries.html">Ministries</a></li>
+                <li><a href="orphanage.html">Orphanage</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="volunteer.html">Get Involved</a></li>
+                <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
