changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,7 +71,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h2>Inspired by Faith</h2>
-                <h1>Transforming Lives Through the Love of Christ</h1>
+                <!-- <h1>Transforming Lives Through the Love of Christ</h1> -->
                 <p>Bringing Hope, Love, and Support to the Community</p>
                 <a href="visit.html" class="cta-button">Plan Your Visit</a> <!-- Call-to-action button -->
             </div>
