changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- ✅ Character Encoding and Responsive Meta Tags -->
-    <meta charset="UTF-8"> <!-- Defines the character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsiveness on mobile devices -->
-    
-    <!-- ✅ SEO Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
     <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
     <meta name="author" content="Holy Spirit Prayer House">
 
-    <!-- ✅ Page Title and Favicon -->
     <title>HOLY SPIRIT PRAYER HOUSE</title>
-    <link rel="icon" type="image/png" href="images/favicon.png"> <!-- Page icon displayed in the browser tab -->
-
-    <!-- ✅ Linking External Stylesheet -->
-    <link rel="stylesheet" href="css/styles.css"> <!-- Stylesheet for page styling -->
-
-    <!-- ✅ Linking JavaScript File -->
-    <script src="js/script.js" defer></script> <!-- JavaScript file for interactive behavior -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
 
-    <!-- ✅ Header Section -->
+    <!-- ✅ Header -->
     <header id="mainHeader">
         <div class="header-container">
-            <!-- ✅ Logo -->
             <div class="logo">
-                <img src="images/logo.webp" alt="HSPH"> <!-- Church logo -->
+                <img src="images/logo.webp" alt="HSPH">
             </div>
-
-            <!-- ✅ Desktop Navigation Menu -->
             <nav class="desktop-nav">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -41,15 +30,11 @@
                     <li><a href="events.html">Events</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="volunteer.html">Get Involved</a></li>
-                    <li><a href="donate.html" class="donate-btn">Donate Now</a></li> <!-- Special donation button -->
+                    <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
                 </ul>
             </nav>
-
-            <!-- ✅ Mobile Navigation Toggle Button (Visible on Small Screens) -->
-            <button id="menuButton" class="mobile-menu-button mobile-only">☰</button> <!-- Hamburger menu button -->
+            <button id="menuButton" class="mobile-menu-button mobile-only">☰</button>
         </div>
-
-        <!-- ✅ Mobile Navigation Menu (Hidden by Default) -->
         <nav class="mobile-nav" id="mobileNav">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -65,49 +50,42 @@
         </nav>
     </header>
 
-    <!-- ✅ Hero Section (Main Banner) -->
+    <!-- ✅ Hero Section -->
     <section class="hero">
-        <div class="overlay"></div> <!-- ✅ Overlay for better text readability over background -->
+        <div class="overlay"></div>
         <div class="hero-container">
             <div class="hero-content">
+                <h1>Transforming Lives Through the Love of Christ</h1>
                 <h2>Inspired by Faith</h2>
-                <!-- <h1>Transforming Lives Through the Love of Christ</h1> -->
                 <p>Bringing Hope, Love, and Support to the Community</p>
-                <a href="visit.html" class="cta-button">Plan Your Visit</a> <!-- Call-to-action button -->
+                <a href="visit.html" class="cta-button">Plan Your Visit</a>
             </div>
         </div>
     </section>
 
     <!-- ✅ Information Sections -->
     <section class="section-container">
-        <!-- ✅ About Us Section -->
         <div class="section about">
             <h2>About Us</h2>
             <p>We are dedicated to spreading faith and love through our ministries.</p>
         </div>
-
-        <!-- ✅ Our Ministries Section -->
         <div class="section ministries">
             <h2>Our Ministries</h2>
             <p>Serving the community through prayer, outreach, and support.</p>
         </div>
-
-        <!-- ✅ Support Our Mission (Donation) Section -->
         <div class="section donate">
             <h2>Support Our Mission</h2>
             <p>Your donations help us continue our work in serving the needy.</p>
-            <a href="donate.html" class="cta-button">Donate Now</a> <!-- Redirects to the donation page -->
+            <a href="donate.html" class="cta-button">Donate Now</a>
         </div>
     </section>
 
-    <!-- ✅ About the Founder Section -->
+    <!-- ✅ Founder Section -->
     <section class="founder-section">
         <div class="founder-container">
-            <!-- ✅ Founder Image -->
             <div class="founder-image">
-                <img src="images/founder.jpg" alt="Founder"> <!-- Image of the pastor -->
+                <img src="images/founder.jpg" alt="Founder">
             </div>
-            <!-- ✅ Founder Information -->
             <div class="founder-content">
                 <h2>About the Founder</h2>
                 <h3>Pastor P. Moses</h3>
@@ -116,21 +94,19 @@
         </div>
     </section>
 
-    <!-- ✅ Footer Section -->
+    <!-- ✅ Footer -->
     <footer>
         <div class="footer-container">
-            <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p> <!-- Copyright notice -->
-
-            <!-- ✅ Social Media Links -->
+            <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
             <div class="social-icons">
                 <a href="https://www.youtube.com/@pastorpmoses" target="_blank">
-                    <img src="images/youtube.png" alt="YouTube"> <!-- YouTube Link -->
+                    <img src="images/youtube.png" alt="YouTube">
                 </a>
                 <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
-                    <img src="images/instagram.png" alt="Instagram"> <!-- Instagram Link -->
+                    <img src="images/instagram.png" alt="Instagram">
                 </a>
                 <a href="https://www.facebook.com/holy.jesus132" target="_blank">
-                    <img src="images/facebook.png" alt="Facebook"> <!-- Facebook Link -->
+                    <img src="images/facebook.png" alt="Facebook">
                 </a>
             </div>
         </div>
