changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
                     <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
                 </ul>
             </nav>
-            <button id="menuButton" class="mobile-menu-button mobile-only">☰</button>
+            <button id="menuButton" class="mobile-menu-button">☰</button>
         </div>
         <nav class="mobile-nav" id="mobileNav">
             <ul>
@@ -49,6 +49,7 @@
             </ul>
         </nav>
     </header>
+    
 
     <!-- ✅ Hero Section -->
     <section class="hero">
