changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,13 +56,14 @@
         <div class="overlay"></div>
         <div class="hero-container">
             <div class="hero-content">
-                <h1>Transforming Lives Through the Love of Christ</h1>
+                <h1 class="page-title">Transforming Lives Through the Love of Christ</h1> <!-- ✅ Title -->
                 <h2>Inspired by Faith</h2>
                 <p>Bringing Hope, Love, and Support to the Community</p>
                 <a href="visit.html" class="cta-button">Plan Your Visit</a>
             </div>
         </div>
     </section>
+    
 
     <!-- ✅ Information Sections -->
     <section class="section-container">
