--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
         <div class="overlay"></div>
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="page-title">Transforming Lives Through the Love of Christ</h1>
+                <h1 class="page-title">Holy Spirit Prayer House</h1>
                 <h2>Inspired by Faith</h2>
                 <p>Bringing Hope, Love, and Support to the Community</p>
                 <a href="visit.html" class="cta-button">Plan Your Visit</a>
