--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="page-title">Holy Spirit Prayer House</h1>
-                <h2>Inspired by Faith</h2>
+                <!-- <h2>Inspired by Faith</h2> -->
                 <p>Bringing Hope, Love, and Support to the Community</p>
                 <a href="visit.html" class="cta-button">Plan Your Visit</a>
             </div>
