--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,7 @@
     <title>HOLY SPIRIT PRAYER HOUSE</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- ✅ Add Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
