changes in code

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Us - HOLY SPIRIT PRAYER HOUSE</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
 </head>
 <body>
+    <!-- ✅ Header with Logo and Menu Button -->
+    <header class="header">
+        <div class="logo">
+            <img src="images/logo.png" alt="Logo">
+        </div>
+        <div class="menu-button">
+            <button>Menu</button>
+        </div>
+    </header>
 
-    <div id="header-container"></div>
+    <!-- ✅ Main Content -->
+    <main class="main-content">
+        Located in Oduru
+    </main>
 
-    <section class="page-content">
-        <h1>About Us</h1>
-        <p>We are dedicated to spreading faith and love through our ministries.</p>
-    </section>
-
-    <div id="footer-container"></div>
-
+    <!-- ✅ Footer -->
+    <footer class="footer">
+        <div class="footer-left">
+            <div class="founder-photo">
+                <img src="images/founder.jpg" alt="Founder">
+            </div>
+            <div class="founder-name">
+                <p>Rev P. Moses</p>
+            </div>
+        </div>
+        <div class="footer-center">
+            <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
