changes in code

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,40 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact Us - HOLY SPIRIT PRAYER HOUSE</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
-    <!-- ✅ Header with Logo and Menu Button -->
-    <header class="header">
-        <div class="logo">
-            <img src="images/logo.png" alt="Logo">
-        </div>
-        <div class="menu-button">
-            <button>Menu</button>
-        </div>
-    </header>
 
-    <!-- ✅ Main Content -->
-    <main class="main-content">
-        <!-- Your main content goes here -->
-    </main>
+    <!-- ✅ Include the header -->
+    <div id="header-container"></div>
 
-    <!-- ✅ Footer -->
-    <footer class="footer">
-        <div class="footer-left">
-            <div class="founder-photo">
-                <img src="images/founder.jpg" alt="Founder">
-            </div>
-            <div class="founder-name">
-                <p>Rev P. Moses</p>
-            </div>
-        </div>
-        <div class="footer-center">
-            <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
-        </div>
-    </footer>
+    <!-- ✅ Contact Section -->
+    <section class="page-content">
+        <h1>Contact Us</h1>
+        <p>Email: pastorpmoses2014@gmail.com</p>
+        <p>Phone: +91 9848315170</p>
+        <p>Phone: +1 (551) 697-6451</p>
+        <p>Address: 94 Street, Andhra Pradesh, India</p>
+    </section>
+
+    <!-- ✅ Include the footer -->
+    <div id="footer-container"></div>
+
 </body>
 </html>
