changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- ✅ Add Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
@@ -107,7 +108,7 @@
                     <img src="images/youtube.png" alt="YouTube">
                 </a>
                 <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
-                    <img src="images/instagram.png" alt="Instagram">
+                    <img src="images/instgram.png" alt="Instagram">
                 </a>
                 <a href="https://www.facebook.com/holy.jesus132" target="_blank">
                     <img src="images/facebook.png" alt="Facebook">
