--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
             <div class="founder-content">
                 <h2>Founder</h2>
                 <h3>Rev P.Moses</h3>
-                <p>Pastor P. Moses is the visionary behind the Holy Spirit Prayer House, dedicated to spreading faith, love, and hope to communities worldwide. Through prayer, outreach, and ministry, he has transformed lives and continues to guide people in their spiritual journey.</p>
+                <h4>Pastor P. Moses is the visionary behind the Holy Spirit Prayer House, dedicated to spreading faith, love, and hope to communities worldwide. Through prayer, outreach, and ministry, he has transformed lives and continues to guide people in their spiritual journey.</h4>
             </div>
         </div>
     </section>
