--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,7 @@
         <div class="overlay"></div>
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="page-title">Holy Spirit Prayer House</h1>
+                <h1 class="page-title">HOLY SPIRIT PRAYER HOUSE</h1>
                 <!-- <h2>Inspired by Faith</h2> -->
                 <p>Bringing Hope, Love, and Support to the Community</p>
                 <a href="visit.html" class="cta-button">Plan Your Visit</a>
@@ -92,9 +92,9 @@
                 <img src="images/founder.jpg" alt="Founder">
             </div>
             <div class="founder-content">
-                <h2>Founder</h2>
+                <h2>FOUNDER</h2>
                 <h3>Rev P.Moses</h3>
-                <h4>Pastor P. Moses is the visionary behind the Holy Spirit Prayer House, dedicated to spreading faith, love, and hope to communities worldwide. Through prayer, outreach, and ministry, he has transformed lives and continues to guide people in their spiritual journey.</h4>
+                <p>Pastor P. Moses is the visionary behind the Holy Spirit Prayer House, dedicated to spreading faith, love, and hope to communities worldwide. Through prayer, outreach, and ministry, he has transformed lives and continues to guide people in their spiritual journey.</p>
             </div>
         </div>
     </section>
@@ -102,13 +102,13 @@
     <!-- ✅ Footer -->
     <footer>
         <div class="footer-container">
-            <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
+            <p>&copy; 2025 Holy Spirit Prayer House | All Rights Reserved</p>
             <div class="social-icons">
                 <a href="https://www.youtube.com/@pastorpmoses" target="_blank">
                     <img src="images/youtube.png" alt="YouTube">
                 </a>
                 <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
-                    <img src="images/instgram.png" alt="Instagram">
+                    <img src="images/instgram.jpg" alt="Instagram">
                 </a>
                 <a href="https://www.facebook.com/holy.jesus132" target="_blank">
                     <img src="images/facebook.png" alt="Facebook">
