--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,7 +132,7 @@
         const res = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
             method: 'POST',
             headers: {
-                'Authorization': 'Bearer YOUR_DIRECT_LINE_SECRET'
+                'Authorization': 'Bearer 8wBOgG8xJgSk81WXqYwrNiq3OvDFK34SHkPsjErWZ2ib4vhc3uJ1JQQJ99BBACi5YpzAArohAAABAZBS3KHD.FE9G3z76yOo8cD01bzxHFo8YYAzNFt2GCNvgJFNsGgx8eE0jUGPSJQQJ99BBACi5YpzAArohAAABAZBS3RAU'
             }
         });
         const { token } = await res.json();
